--- a/spam_classification_word_embedding.ipynb
+++ b/spam_classification_word_embedding.ipynb
@@ -789,7 +789,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#another way that mostly gets used for using these weights for another model\n",
+        "#another way that mostly gets used is for using these weights for another model\n",
         "#model.save_weights('my_weights')"
       ],
       "metadata": {
